--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <option value="https://servidor20-2.brlogic.com:8106/live?source=website">Campos FM (Cristino Castro-PI)</option>
             <option value="https://8157.brasilstream.com.br/stream">Clube FM Brasília</option>
             <option value="https://shout25.crossradio.com.br:18002/1">Gazeta FM</option> 
+            <option value="https://stm1.aovivodigital.com.br:10588/stream">Rádio Goias Sertanejo FM</option>
             <option value="https://stream-170.zeno.fm/c45wbq2us3buv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiJjNDV3YnEydXMzYnV2IiwiaG9zdCI6InN0cmVhbS0xNzAuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IjhlLVB3U2NLVHNlTmxqb2liQnlfLXciLCJpYXQiOjE3MzMxNDQwOTQsImV4cCI6MTczMzE0NDE1NH0.vyN6hOIJbI6yJDPeS9HXNuvUBceHk5TcGz-lQRRaQ5A">Jovem Pan FM</option>
             <option value="https://ice.fabricahost.com.br/metropolitana985sp">Metropolitana FM</option>
             <option value="https://stm11.xcast.com.br:11276/stream">Nativa FM</option> 
